# Algoviz

./: CMakeLists.txt  Makefile  README.md  imgui.ini
include/: arrayinfo.hpp  global.hpp  gui.hpp  sorting.hpp
src/: arrayinfo.cpp  global.cpp  gui.cpp  main.cpp  sorting.cpp
